menambahkan code TTL pada index html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,16 @@ and open the template in the editor.
                     <input type="text" name="lokasi"/>
                 </p>
                 <br/>
+                <p id="pnama" style="float: left">
+                    <label>Tempat Lahir : </label>
+                    <input type="text" name="tempat"/>
+                </p>
+                </br>
+                <p id="pnama" style="float: left">
+                    <label>Tanggal Lahir : </label>
+                    <input type="date" name="tgl"/>
+                </p>
+                </br>
                 <p id="pjrsn" style="float: left">
                     <label>Jurusan : </label>
                     <input type="text" name="jurusan"/>
