menambahkan code pada controller

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
         </center>
         <hr/>
         <center>
-        <form action="/hiling" method="POST" enctype="multipart/form-data">
+        <form action="/showform" method="POST" enctype="multipart/form-data">
             <fieldset id="pfieldset" style="width: 350px">
                 <legend>Data Mahasiswa</legend>
                 <p id="pnama" style="float: left">
