menambahkan code pada viewktm untuk menampilkan ktm

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,7 +32,7 @@ and open the template in the editor.
                 <br/>
                 <p id="plok" style="float: left">
                     <label>NIM : </label>
-                    <input type="text" name="lokasi"/>
+                    <input type="text" name="nim"/>
                 </p>
                 <br/>
                 <p id="pnama" style="float: left">
