menambahkan code css untuk display ktmnya pada viewktm html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,12 +32,12 @@ and open the template in the editor.
             <fieldset id="pfieldset" style="width: 350px; box-shadow: 3px 3px 5px rgba(0,0,0,0.4)">
                 <h1>FORM KTM</h1>
                 <p id="pnama" style="float: left">
-                    <label>Nama : </label>
+                    <label>Nama &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;: </label>
                     <input type="text" name="nama"/>
                 </p>
                 <br/>
                 <p id="plok" style="float: left">
-                    <label>NIM : </label>
+                    <label>NIM &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;: </label>
                     <input type="text" name="nim"/>
                 </p>
                 <br/>
@@ -52,12 +52,12 @@ and open the template in the editor.
                 </p>
                 </br>
                 <p id="pjrsn" style="float: left">
-                    <label>Jurusan : </label>
+                    <label>Jurusan &ensp;&ensp;&ensp;&ensp;&ensp;: </label>
                     <input type="text" name="jurusan"/>
                 </p>
                 </br>
                 <p id="email" style="float: left">
-                    <label>Email UMY : </label>
+                    <label>Email UMY &ensp;: </label>
                     <input type="text" name="email"/>
                 </p>
                 </br>
